# advent-of-code

./: Cargo.toml  README.md
.github/workflows/: aoc.yml
aoc2023/: Cargo.toml
aoc2023/src/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs
aoc2024/: Cargo.toml
aoc2024/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  lib.rs
aoc2025/: Cargo.toml
aoc2025/src/: day_1.rs  day_10.rs  day_11.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs
common/src/: lib.rs
src/: main.rs
