[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Pavlos Karakalidis <pkarakal@pkarakal.com>"]

[workspace]
members = ["aoc2023", "aoc2024", "common"]

[dependencies]
clap = { version = "4.4.10", features = ["default", "derive"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = { version = "1.0.108" }
aoc2023 = {path = "aoc2023"}
aoc2024 = {path = "aoc2024"}
common = {path = "common"}
